# courier

./: .gitignore  LICENSE  README.md  pyproject.toml
courier/data/: mail2df.py
courier/utils/: __init__.py  logger.py
