[tool.poetry]
name = "courier"
version = "0.0.1"
description = "Training data from source to destination."
authors = ["AmreshVenugopal <amresh.venugopal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
google-api-python-client = "^1.8.3"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
xlrd = "^1.2.0"
coloredlogs = "^14.0"
tqdm = "^4.46.0"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
